# triumph

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json
Engine/: CMakeLists.txt
Engine/Include/Engine/Core/: ApplicationBase.hpp  Macro.hpp  Result.hpp  Types.hpp
Engine/Include/Engine/Platform/: IWindow.hpp  Window.hpp  WindowEvents.hpp  WindowFactory.hpp
Engine/Include/Engine/Platform/Events/: EventListener.hpp  TypedEventListener.hpp  WindowEvents.hpp
Engine/Include/Engine/Platform/Win32/: Win32Window.hpp
Engine/Include/Engine/Renderer/: Device.hpp  Renderer.hpp  SwapChain.hpp
Engine/Include/Engine/Utility/: Logger.hpp  String.hpp
Engine/Source/Engine/Core/: ApplicationBase.cpp
Engine/Source/Engine/Platform/: Window.cpp
Engine/Source/Engine/Platform/Events/: EventListener.cpp
Engine/Source/Engine/Platform/Win32/: Win32Window.cpp
Engine/Source/Engine/Renderer/: Device.cpp  Renderer.cpp  SwapChain.cpp
Engine/Source/Engine/Utility/: Logger.cpp  String.cpp
Game/: CMakeLists.txt
Game/Include/: Main.hpp
Game/Include/Game/: Application.hpp
Game/Source/: Main.cpp
Game/Source/Game/: Application.cpp
